hphp/test/slow/reified_generics/soft-reification-2.php.expectf
Warning: Generic at index 2 to Class C must be reified, erased given in %s on line 7

Warning: Generic at index 2 to Class C must be reified, erased given in %s on line 9

Warning: Generic at index 2 to Class C must be reified, erased given in %s on line 8

Fatal error: Class C expects a reified generic at index 3 in %s on line 8
